# nix-rust-build

./: .gitignore  Cargo.toml  compile_test.nix  flake.nix
nix/: build.nix  default.nix  lib.nix  targets.nix
nix/rust-build/: build.sh  cargo-metadata.sh  hooks.nix  prepare-lockfile.sh  run-build-script.sh  rust-build.nix  tests.nix  unpack-src.sh  vendor-build.sh
nu/: install_src_hash.nu  metadata.nu  prepare_lockfile.nu  run_build.nu  run_build_script.nu  run_common.nu  version.nu  write_vendor.nu
src/: compile.rs  main.rs  metadata.rs  prepare_lockfile.rs  run_build_script.rs  unpack_vendor.rs  write_vendor.rs
tests/: default.nix  foldOverrides.nix  mergeAttrsDeep.nix  mergeListAttrSets.nix  patchSrc.nix
