[package]
name = "nix-rust-build"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cargo-util-schemas = "0.8.2"
cargo_metadata = "0.21.0"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.3"
flate2 = "1.1.2"
hex = "0.4.3"
owo-colors = "4.2.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
toml = "0.8.23"
